--- a/src/app/pages/hero-journey/sections/share/share.html
+++ b/src/app/pages/hero-journey/sections/share/share.html
@@ -1,7 +1,7 @@
 <template args="model">
     <div class="boxed">
         <div class="headline-group">
-            <h2>{model.heading}</h2>
+            <h2>{model.heading}, {model.firstName}!</h2>
             <div class="blurb">{model.description}</div>
             <br>
             <div class="instructions">{model.instructions}</div>
