Fix video sizing for mobile in Getting Started section of Rover page

--- a/src/app/pages/rover-by-openstax/sections/getting-started.scss
+++ b/src/app/pages/rover-by-openstax/sections/getting-started.scss
@@ -33,6 +33,7 @@
             grid-template-columns: minmax(auto, 67%) auto;
         }
 
+        > div,
         > div > * {
             max-width: 100%;
         }
