--- a/src/app/pages/adoption/hidden-fields/hidden-fields.html
+++ b/src/app/pages/adoption/hidden-fields/hidden-fields.html
@@ -3,7 +3,7 @@
     <input type="hidden" name="Application_Source__c" value="OS Web/Accounts">
     <input type="hidden" name="oid" value="{model.salesforce.oid}">
     <input type="hidden" name="lead_source" value="Adoption Form">
-    <input type="hidden" name="Role__c" value="Faculty">
+    <input type="hidden" name="Role__c" value="{model.role}">
     <input type="hidden" name="Subject__c" value="{model.book}">
     <input type="hidden" name="Adoption_Status__c" value={model.adoptionStatus}>
     <input type="hidden" name="Number_of_Students__c" value={model.numberOfStudents}>
