--- a/src/app/pages/interest/hidden-fields/hidden-fields.html
+++ b/src/app/pages/interest/hidden-fields/hidden-fields.html
@@ -4,6 +4,6 @@
     <input type="hidden" name="oid" value="{model.salesforce.oid}">
     <input type="hidden" name="lead_source" value="Interest Form">
     <input type="hidden" name="00NU00000055spw" value="High Interest in Adopting">
-    <input type="hidden" name="Role__c" value="Faculty">
+    <input type="hidden" name="Role__c" value="{model.role}">
     <!-- <input type="hidden" name="debug" value="1"> [Debug mode] -->
 </template>
