Back end data calls

--- a/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.html
+++ b/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.html
@@ -13,5 +13,6 @@
                 </if>
             </div>
         </div>
+        <img class="badge {model.nodeStatus(4) === 'done' ? '' : 'not-yet'}" src="/images/hero-journey/hero-badge.png">
     </if>
 </template>
