--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -199,7 +199,8 @@ sup {
     flex: 1 0 auto;
     z-index: 0;
 
-    &.with-overlay {
+    &.with-overlay,
+    &.with-sticky {
         z-index: 1;
     }
 }
