--- a/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.scss
+++ b/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.scss
@@ -7,7 +7,7 @@ $tooltip-breakpoint: #{$media-content-max + 10em};
 
 .numbered-navigator {
     background-color: ui-color(white);
-    border-radius: 5rem;
+    border-radius: 2.5rem;
     box-shadow: $shadow;
     display: grid;
     padding: 0.9rem;
@@ -18,7 +18,7 @@ $tooltip-breakpoint: #{$media-content-max + 10em};
         grid-auto-flow: column;
         left: 0;
         top: 5.5rem;
-        width: 100%;
+        width: calc(100% - 8rem);
     }
 
     @include wider-than($phone-max) {
@@ -110,7 +110,7 @@ $tooltip-breakpoint: #{$media-content-max + 10em};
 
         @include width-up-to($phone-max) {
             align-items: center;
-            grid-template-columns: auto 1fr;
+            grid-auto-flow: column;
         }
 
         @include wider-than($phone-max) {
@@ -190,12 +190,34 @@ $tooltip-breakpoint: #{$media-content-max + 10em};
 
         @include width-up-to($phone-max) {
             height: 0.2rem;
-            width: calc(25vw - 4.5rem); // Correct for 5 nodes
+            width: calc(25vw - 6.43rem); // Correct for 5 nodes
         }
 
         @include wider-than($phone-max) {
             height: 5rem;
             width: 0.2rem;
+        }
+    }
+
+    .badge {
+        max-width: 8rem;
+        position: absolute;
+
+        @include width-up-to($phone-max) {
+            right: 0;
+            top: 50%;
+            transform: translate(100%, calc(0.25rem - 50%));
+        }
+
+        @include wider-than($phone-max) {
+            bottom: 0;
+            right: 50%;
+            transform: translate(50%, 100%);
+        }
+
+        &.not-yet {
+            filter: grayscale(100%);
+            opacity: 0.9;
         }
     }
 
