--- a/src/app/pages/hero-journey/sections/thanks/thanks.scss
+++ b/src/app/pages/hero-journey/sections/thanks/thanks.scss
@@ -14,6 +14,7 @@
 
     &:not(.hidden) {
         display: grid;
+        min-height: calc(100vh - 5.5rem);
     }
 
     h2 {
@@ -24,6 +25,7 @@
     }
 
     img {
+        align-self: end;
         max-width: 100%;
     }
 }
