Track progress on Hero Journey page
Progress saved to/retrieved from CMS.
Adoption status requested from CMS.
Not pulling content from CMS, tho.

--- a/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.html
+++ b/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.html
@@ -13,6 +13,6 @@
                 </if>
             </div>
         </div>
-        <img class="badge {model.nodeStatus(4) === 'done' ? '' : 'not-yet'}" src="/images/hero-journey/hero-badge.png">
+        <img class="badge {model.nodeStatus(4) === 'done' ? '' : 'not-yet'}" src="/images/hero-journey/hero-badge.svg">
     </if>
 </template>
