--- a/src/app/pages/hero-journey/sections/thanks/thanks.html
+++ b/src/app/pages/hero-journey/sections/thanks/thanks.html
@@ -1,4 +1,5 @@
 <template args="model">
     <h2>{model.heading}</h2>
+    <div class="description" data-html="description"></div>
     <img src="{model.image.image}" alt="{model.image.altText}">
 </template>
