--- a/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.scss
+++ b/src/app/pages/hero-journey/numbered-navigator/numbered-navigator.scss
@@ -40,7 +40,6 @@ $tooltip-breakpoint: #{$media-content-max + 10em};
         background-color: ui-color(white);
         border-radius: 0.2rem;
         filter: drop-shadow(rgba(0, 0, 0, 0.2) 0 0.2rem 0.2rem);
-        height: 6.5rem;
         line-height: normal;
         padding: 1rem;
         position: absolute;
@@ -200,8 +199,8 @@ $tooltip-breakpoint: #{$media-content-max + 10em};
     }
 
     .badge {
-        max-width: 8rem;
         position: absolute;
+        width: 8rem;
 
         @include width-up-to($phone-max) {
             right: 0;
@@ -212,7 +211,7 @@ $tooltip-breakpoint: #{$media-content-max + 10em};
         @include wider-than($phone-max) {
             bottom: 0;
             right: 50%;
-            transform: translate(50%, 100%);
+            transform: translate(52%, 100%);
         }
 
         &.not-yet {
