--- a/src/app/pages/hero-journey/sections/thanks/thanks.html
+++ b/src/app/pages/hero-journey/sections/thanks/thanks.html
@@ -1,5 +1,7 @@
 <template args="model">
-    <h2>{model.heading}</h2>
-    <div class="description" data-html="description"></div>
+    <div class="text-block">
+        <h2>{model.heading}</h2>
+        <div class="description" data-html="description"></div>
+    </div>
     <img src="{model.image.image}" alt="{model.image.altText}">
 </template>
