--- a/src/app/pages/hero-journey/sections/books/books.html
+++ b/src/app/pages/hero-journey/sections/books/books.html
@@ -1,13 +1,17 @@
 <template args="model">
     <div class="boxed">
-        <h1>{model.heading}, {model.firstName}</h1>
-        <div class="tagline">{model.subheading}</div>
-        <div class="description">{model.description}</div>
-        <div class="card">
-            <h2>{model.bookHeading}</h2>
-            <div>{model.bookDescription}</div>
-            <a class="btn primary" href="{model.booksLink}">{model.booksLinkText}</a>
-            <div data-html="skipHtml"></div>
-        </div>
+        <if condition="model.email">
+            <h1>{model.heading}, {model.firstName}</h1>
+            <div class="tagline">{model.subheading}</div>
+            <div class="description">{model.description}</div>
+            <div class="card">
+                <h2>{model.bookHeading}</h2>
+                <div>{model.bookDescription}</div>
+                <a class="btn primary" href="{model.booksLink}">{model.booksLinkText}</a>
+                <div data-html="skipHtml"></div>
+            </div>
+        <else>
+            <h1>Please log in</h1>
+        </if>
     </div>
 </template>
