Update login notice, fix adoption detection code
Also don't defer analytics and optimizely scripts, so they're definitely loaded before our scripts.

--- a/src/app/pages/hero-journey/sections/books/books.html
+++ b/src/app/pages/hero-journey/sections/books/books.html
@@ -11,7 +11,7 @@
                 <div data-html="skipHtml"></div>
             </div>
         <else>
-            <h1>Please log in</h1>
+            <h1>Get your Hero Badge! Please <a href="{model.login}">log in here</a> to start your journey.</h1>
         </if>
     </div>
 </template>
