--- a/src/app/pages/adoption-confirmation/supplemental-form.html
+++ b/src/app/pages/adoption-confirmation/supplemental-form.html
@@ -7,7 +7,7 @@
     </div>
     <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
     <form accept-charset="UTF-8" class="form" target="form-response"
-     action="https://{model.salesforce.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
+     action="{model.salesforce.webtoleadUrl}" method="post">
         <div>
             <input name="utf8" type="hidden" value="✓">
             <input type="hidden" name="oid" value="{model.salesforce.oid}">
