--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -487,7 +487,7 @@
         <div>
           <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
           <form id="donation-update" accept-charset="UTF-8" class="form" target="form-response"
-           action="https://{model.salesforce.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8" method="post">
+           action="{model.salesforce.webtoleadUrl}" method="post">
               <input type="hidden" name="oid" value="{model.salesforce.oid}">
               <input type="hidden" name="lead_source" value="Donation">
               <input type="hidden" name="first_name">
