--- a/src/app/pages/impact-dev/map/testimonial.html
+++ b/src/app/pages/impact-dev/map/testimonial.html
@@ -13,7 +13,12 @@
         </div>
     </div>
     <div class="toggle-datalist-footer">
-        <a href="#" class="sub-testimonial">Submit your testimonial</a>
-        <span class="sub-testimonial-icon"><i class="fa fa-chevron-right right-angle"></i></span>
+        <if condition="model.loggedIn">
+            <a href="/" class="sub-testimonial">Submit your testimonial</a>
+            <span class="sub-testimonial-icon"><i class="fa fa-chevron-right right-angle"></i></span>
+        <else>
+            <a href="{model.login}" class="login-link">Login to submit your testimonial</a>
+            <span class="sub-testimonial-icon"><i class="fa fa-chevron-right right-angle"></i></span>
+        </if>
     </div>
 </template>
